compiler/whileParser.java
// $ANTLR 3.5.1 /home/axel/ESIR2/TLC/while.g 2024-12-09 12:31:15

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class whileParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "ASSIGN_EXPR", "ASSIGN_VARS", 
		"BODY", "CALL", "COMMAND", "COMMANDS", "COMMENT", "CONS", "DEFINITION", 
		"Dec", "EXPR", "EXPRBASE", "EXPRS", "FOR", "FOREACH", "FUNC", "HD", "IF", 
		"INPUT", "INPUTSUB", "LIST", "Maj", "Min", "OUTPUT", "PARAM", "PROGRAM", 
		"SYMBOL", "Symbol", "TL", "VARIABLE", "Variable", "WHILE", "WS", "'%'", 
		"'('", "')'", "','", "':'", "':='", "';'", "'=?'", "'cons'", "'do'", "'else'", 
		"'fi'", "'for'", "'foreach'", "'function'", "'hd'", "'if'", "'in'", "'list'", 
		"'nil'", "'nop'", "'od'", "'read'", "'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int ASSIGN=4;
	public static final int ASSIGN_EXPR=5;
	public static final int ASSIGN_VARS=6;
	public static final int BODY=7;
	public static final int CALL=8;
	public static final int COMMAND=9;
	public static final int COMMANDS=10;
	public static final int COMMENT=11;
	public static final int CONS=12;
	public static final int DEFINITION=13;
	public static final int Dec=14;
	public static final int EXPR=15;
	public static final int EXPRBASE=16;
	public static final int EXPRS=17;
	public static final int FOR=18;
	public static final int FOREACH=19;
	public static final int FUNC=20;
	public static final int HD=21;
	public static final int IF=22;
	public static final int INPUT=23;
	public static final int INPUTSUB=24;
	public static final int LIST=25;
	public static final int Maj=26;
	public static final int Min=27;
	public static final int OUTPUT=28;
	public static final int PARAM=29;
	public static final int PROGRAM=30;
	public static final int SYMBOL=31;
	public static final int Symbol=32;
	public static final int TL=33;
	public static final int VARIABLE=34;
	public static final int Variable=35;
	public static final int WHILE=36;
	public static final int WS=37;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public whileParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public whileParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return whileParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/axel/ESIR2/TLC/while.g"; }


	public static class start_rule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "start_rule"
	// /home/axel/ESIR2/TLC/while.g:58:1: start_rule : program ;
	public final whileParser.start_rule_return start_rule() throws RecognitionException {
		whileParser.start_rule_return retval = new whileParser.start_rule_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope program1 =null;


		try {
			// /home/axel/ESIR2/TLC/while.g:58:12: ( program )
			// /home/axel/ESIR2/TLC/while.g:58:14: program
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_program_in_start_rule365);
			program1=program();
			state._fsp--;

			adaptor.addChild(root_0, program1.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "start_rule"


	public static class vars_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vars"
	// /home/axel/ESIR2/TLC/while.g:61:1: vars : Variable ( ',' Variable )* -> ( Variable )+ ;
	public final whileParser.vars_return vars() throws RecognitionException {
		whileParser.vars_return retval = new whileParser.vars_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable2=null;
		Token char_literal3=null;
		Token Variable4=null;

		Object Variable2_tree=null;
		Object char_literal3_tree=null;
		Object Variable4_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");

		try {
			// /home/axel/ESIR2/TLC/while.g:61:6: ( Variable ( ',' Variable )* -> ( Variable )+ )
			// /home/axel/ESIR2/TLC/while.g:61:8: Variable ( ',' Variable )*
			{
			Variable2=(Token)match(input,Variable,FOLLOW_Variable_in_vars374);  
			stream_Variable.add(Variable2);

			// /home/axel/ESIR2/TLC/while.g:61:16: ( ',' Variable )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==41) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/axel/ESIR2/TLC/while.g:61:17: ',' Variable
					{
					char_literal3=(Token)match(input,41,FOLLOW_41_in_vars376);  
					stream_41.add(char_literal3);

					Variable4=(Token)match(input,Variable,FOLLOW_Variable_in_vars377);  
					stream_Variable.add(Variable4);

					}
					break;

				default :
					break loop1;
				}
			}

			// AST REWRITE
			// elements: Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 61:30: -> ( Variable )+
			{
				if ( !(stream_Variable.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_Variable.hasNext() ) {
					adaptor.addChild(root_0, stream_Variable.nextNode());
				}
				stream_Variable.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "vars"


	public static class inputSub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inputSub"
	// /home/axel/ESIR2/TLC/while.g:62:1: inputSub : vars ;
	public final whileParser.inputSub_return inputSub() throws RecognitionException {
		whileParser.inputSub_return retval = new whileParser.inputSub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope vars5 =null;


		try {
			// /home/axel/ESIR2/TLC/while.g:62:10: ( vars )
			// /home/axel/ESIR2/TLC/while.g:62:12: vars
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_vars_in_inputSub389);
			vars5=vars();
			state._fsp--;

			adaptor.addChild(root_0, vars5.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "inputSub"


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// /home/axel/ESIR2/TLC/while.g:63:1: input : ( inputSub )? -> ^( PARAM ( inputSub )? ) ;
	public final whileParser.input_return input() throws RecognitionException {
		whileParser.input_return retval = new whileParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputSub6 =null;

		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");

		try {
			// /home/axel/ESIR2/TLC/while.g:63:7: ( ( inputSub )? -> ^( PARAM ( inputSub )? ) )
			// /home/axel/ESIR2/TLC/while.g:63:9: ( inputSub )?
			{
			// /home/axel/ESIR2/TLC/while.g:63:9: ( inputSub )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Variable) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/axel/ESIR2/TLC/while.g:63:9: inputSub
					{
					pushFollow(FOLLOW_inputSub_in_input396);
					inputSub6=inputSub();
					state._fsp--;

					stream_inputSub.add(inputSub6.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: inputSub
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 63:19: -> ^( PARAM ( inputSub )? )
			{
				// /home/axel/ESIR2/TLC/while.g:63:22: ^( PARAM ( inputSub )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PARAM, "PARAM"), root_1);
				// /home/axel/ESIR2/TLC/while.g:63:30: ( inputSub )?
				if ( stream_inputSub.hasNext() ) {
					adaptor.addChild(root_1, stream_inputSub.nextTree());
				}
				stream_inputSub.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class command_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "command"
	// /home/axel/ESIR2/TLC/while.g:64:1: command : ( 'nop' | vars ':=' exprs -> ^( ASSIGN ^( ASSIGN_VARS vars ) ^( ASSIGN_EXPR exprs ) ) | s_if | s_while | s_for | s_foreach );
	public final whileParser.command_return command() throws RecognitionException {
		whileParser.command_return retval = new whileParser.command_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal7=null;
		Token string_literal9=null;
		ParserRuleReturnScope vars8 =null;
		ParserRuleReturnScope exprs10 =null;
		ParserRuleReturnScope s_if11 =null;
		ParserRuleReturnScope s_while12 =null;
		ParserRuleReturnScope s_for13 =null;
		ParserRuleReturnScope s_foreach14 =null;

		Object string_literal7_tree=null;
		Object string_literal9_tree=null;
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleSubtreeStream stream_exprs=new RewriteRuleSubtreeStream(adaptor,"rule exprs");
		RewriteRuleSubtreeStream stream_vars=new RewriteRuleSubtreeStream(adaptor,"rule vars");

		try {
			// /home/axel/ESIR2/TLC/while.g:64:9: ( 'nop' | vars ':=' exprs -> ^( ASSIGN ^( ASSIGN_VARS vars ) ^( ASSIGN_EXPR exprs ) ) | s_if | s_while | s_for | s_foreach )
			int alt3=6;
			switch ( input.LA(1) ) {
			case 58:
				{
				alt3=1;
				}
				break;
			case Variable:
				{
				alt3=2;
				}
				break;
			case 54:
				{
				alt3=3;
				}
				break;
			case 63:
				{
				alt3=4;
				}
				break;
			case 50:
				{
				alt3=5;
				}
				break;
			case 51:
				{
				alt3=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /home/axel/ESIR2/TLC/while.g:64:11: 'nop'
					{
					root_0 = (Object)adaptor.nil();


					string_literal7=(Token)match(input,58,FOLLOW_58_in_command413); 
					string_literal7_tree = (Object)adaptor.create(string_literal7);
					adaptor.addChild(root_0, string_literal7_tree);

					}
					break;
				case 2 :
					// /home/axel/ESIR2/TLC/while.g:64:20: vars ':=' exprs
					{
					pushFollow(FOLLOW_vars_in_command418);
					vars8=vars();
					state._fsp--;

					stream_vars.add(vars8.getTree());
					string_literal9=(Token)match(input,43,FOLLOW_43_in_command420);  
					stream_43.add(string_literal9);

					pushFollow(FOLLOW_exprs_in_command422);
					exprs10=exprs();
					state._fsp--;

					stream_exprs.add(exprs10.getTree());
					// AST REWRITE
					// elements: exprs, vars
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 64:36: -> ^( ASSIGN ^( ASSIGN_VARS vars ) ^( ASSIGN_EXPR exprs ) )
					{
						// /home/axel/ESIR2/TLC/while.g:64:39: ^( ASSIGN ^( ASSIGN_VARS vars ) ^( ASSIGN_EXPR exprs ) )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ASSIGN, "ASSIGN"), root_1);
						// /home/axel/ESIR2/TLC/while.g:64:48: ^( ASSIGN_VARS vars )
						{
						Object root_2 = (Object)adaptor.nil();
						root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(ASSIGN_VARS, "ASSIGN_VARS"), root_2);
						adaptor.addChild(root_2, stream_vars.nextTree());
						adaptor.addChild(root_1, root_2);
						}

						// /home/axel/ESIR2/TLC/while.g:64:68: ^( ASSIGN_EXPR exprs )
						{
						Object root_2 = (Object)adaptor.nil();
						root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(ASSIGN_EXPR, "ASSIGN_EXPR"), root_2);
						adaptor.addChild(root_2, stream_exprs.nextTree());
						adaptor.addChild(root_1, root_2);
						}

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					// /home/axel/ESIR2/TLC/while.g:64:92: s_if
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_s_if_in_command444);
					s_if11=s_if();
					state._fsp--;

					adaptor.addChild(root_0, s_if11.getTree());

					}
					break;
				case 4 :
					// /home/axel/ESIR2/TLC/while.g:64:99: s_while
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_s_while_in_command448);
					s_while12=s_while();
					state._fsp--;

					adaptor.addChild(root_0, s_while12.getTree());

					}
					break;
				case 5 :
					// /home/axel/ESIR2/TLC/while.g:64:109: s_for
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_s_for_in_command452);
					s_for13=s_for();
					state._fsp--;

					adaptor.addChild(root_0, s_for13.getTree());

					}
					break;
				case 6 :
					// /home/axel/ESIR2/TLC/while.g:64:117: s_foreach
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_s_foreach_in_command456);
					s_foreach14=s_foreach();
					state._fsp--;

					adaptor.addChild(root_0, s_foreach14.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command"


	public static class commands_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// /home/axel/ESIR2/TLC/while.g:65:1: commands : command ( ';' command )* -> ( command )+ ;
	public final whileParser.commands_return commands() throws RecognitionException {
		whileParser.commands_return retval = new whileParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal16=null;
		ParserRuleReturnScope command15 =null;
		ParserRuleReturnScope command17 =null;

		Object char_literal16_tree=null;
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");

		try {
			// /home/axel/ESIR2/TLC/while.g:65:10: ( command ( ';' command )* -> ( command )+ )
			// /home/axel/ESIR2/TLC/while.g:65:12: command ( ';' command )*
			{
			pushFollow(FOLLOW_command_in_commands463);
			command15=command();
			state._fsp--;

			stream_command.add(command15.getTree());
			// /home/axel/ESIR2/TLC/while.g:65:19: ( ';' command )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==44) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /home/axel/ESIR2/TLC/while.g:65:20: ';' command
					{
					char_literal16=(Token)match(input,44,FOLLOW_44_in_commands465);  
					stream_44.add(char_literal16);

					pushFollow(FOLLOW_command_in_commands466);
					command17=command();
					state._fsp--;

					stream_command.add(command17.getTree());
					}
					break;

				default :
					break loop4;
				}
			}

			// AST REWRITE
			// elements: command
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 65:33: -> ( command )+
			{
				if ( !(stream_command.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_command.hasNext() ) {
					adaptor.addChild(root_0, stream_command.nextTree());
				}
				stream_command.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"


	public static class output_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "output"
	// /home/axel/ESIR2/TLC/while.g:66:1: output : Variable ( ',' Variable )* -> ^( OUTPUT ( Variable )+ ) ;
	public final whileParser.output_return output() throws RecognitionException {
		whileParser.output_return retval = new whileParser.output_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable18=null;
		Token char_literal19=null;
		Token Variable20=null;

		Object Variable18_tree=null;
		Object char_literal19_tree=null;
		Object Variable20_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");

		try {
			// /home/axel/ESIR2/TLC/while.g:66:9: ( Variable ( ',' Variable )* -> ^( OUTPUT ( Variable )+ ) )
			// /home/axel/ESIR2/TLC/while.g:66:11: Variable ( ',' Variable )*
			{
			Variable18=(Token)match(input,Variable,FOLLOW_Variable_in_output480);  
			stream_Variable.add(Variable18);

			// /home/axel/ESIR2/TLC/while.g:66:19: ( ',' Variable )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==41) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /home/axel/ESIR2/TLC/while.g:66:20: ',' Variable
					{
					char_literal19=(Token)match(input,41,FOLLOW_41_in_output482);  
					stream_41.add(char_literal19);

					Variable20=(Token)match(input,Variable,FOLLOW_Variable_in_output483);  
					stream_Variable.add(Variable20);

					}
					break;

				default :
					break loop5;
				}
			}

			// AST REWRITE
			// elements: Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 66:34: -> ^( OUTPUT ( Variable )+ )
			{
				// /home/axel/ESIR2/TLC/while.g:66:37: ^( OUTPUT ( Variable )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_1);
				if ( !(stream_Variable.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_Variable.hasNext() ) {
					adaptor.addChild(root_1, stream_Variable.nextNode());
				}
				stream_Variable.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "output"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// /home/axel/ESIR2/TLC/while.g:67:1: definition : 'read' input '%' commands '%' 'write' output -> ^( BODY input ^( COMMANDS commands ) output ) ;
	public final whileParser.definition_return definition() throws RecognitionException {
		whileParser.definition_return retval = new whileParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal21=null;
		Token char_literal23=null;
		Token char_literal25=null;
		Token string_literal26=null;
		ParserRuleReturnScope input22 =null;
		ParserRuleReturnScope commands24 =null;
		ParserRuleReturnScope output27 =null;

		Object string_literal21_tree=null;
		Object char_literal23_tree=null;
		Object char_literal25_tree=null;
		Object string_literal26_tree=null;
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleTokenStream stream_60=new RewriteRuleTokenStream(adaptor,"token 60");
		RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// /home/axel/ESIR2/TLC/while.g:67:12: ( 'read' input '%' commands '%' 'write' output -> ^( BODY input ^( COMMANDS commands ) output ) )
			// /home/axel/ESIR2/TLC/while.g:67:14: 'read' input '%' commands '%' 'write' output
			{
			string_literal21=(Token)match(input,60,FOLLOW_60_in_definition500);  
			stream_60.add(string_literal21);

			pushFollow(FOLLOW_input_in_definition502);
			input22=input();
			state._fsp--;

			stream_input.add(input22.getTree());
			char_literal23=(Token)match(input,38,FOLLOW_38_in_definition504);  
			stream_38.add(char_literal23);

			pushFollow(FOLLOW_commands_in_definition506);
			commands24=commands();
			state._fsp--;

			stream_commands.add(commands24.getTree());
			char_literal25=(Token)match(input,38,FOLLOW_38_in_definition508);  
			stream_38.add(char_literal25);

			string_literal26=(Token)match(input,64,FOLLOW_64_in_definition510);  
			stream_64.add(string_literal26);

			pushFollow(FOLLOW_output_in_definition512);
			output27=output();
			state._fsp--;

			stream_output.add(output27.getTree());
			// AST REWRITE
			// elements: output, input, commands
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 67:59: -> ^( BODY input ^( COMMANDS commands ) output )
			{
				// /home/axel/ESIR2/TLC/while.g:67:62: ^( BODY input ^( COMMANDS commands ) output )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BODY, "BODY"), root_1);
				adaptor.addChild(root_1, stream_input.nextTree());
				// /home/axel/ESIR2/TLC/while.g:67:75: ^( COMMANDS commands )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMANDS, "COMMANDS"), root_2);
				adaptor.addChild(root_2, stream_commands.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_1, stream_output.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// /home/axel/ESIR2/TLC/while.g:68:1: function : 'function' i= Symbol ':' definition -> ^( FUNC $i definition ) ;
	public final whileParser.function_return function() throws RecognitionException {
		whileParser.function_return retval = new whileParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token i=null;
		Token string_literal28=null;
		Token char_literal29=null;
		ParserRuleReturnScope definition30 =null;

		Object i_tree=null;
		Object string_literal28_tree=null;
		Object char_literal29_tree=null;
		RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// /home/axel/ESIR2/TLC/while.g:68:10: ( 'function' i= Symbol ':' definition -> ^( FUNC $i definition ) )
			// /home/axel/ESIR2/TLC/while.g:68:13: 'function' i= Symbol ':' definition
			{
			string_literal28=(Token)match(input,52,FOLLOW_52_in_function536);  
			stream_52.add(string_literal28);

			i=(Token)match(input,Symbol,FOLLOW_Symbol_in_function542);  
			stream_Symbol.add(i);

			char_literal29=(Token)match(input,42,FOLLOW_42_in_function544);  
			stream_42.add(char_literal29);

			pushFollow(FOLLOW_definition_in_function546);
			definition30=definition();
			state._fsp--;
